# rustympkg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
tests/: cli.rs
