[package]
name = "rustympkg"
version = "0.1.1"
authors = ["Sighery"]
edition = "2018"
license = "MIT"
description = "Replacement for Arch Linux's makepkg/updpkgsums and similar tools"
repository = "https://github.com/Sighery/rustympkg"
readme = "README.md"
keywords = ["arch-linux", "PKGBUILD", "makepkg", "arch-build-system"]
categories = ["command-line-utilities"]

[dependencies]
rustympkglib = "0.1.1"
serde_json = "1.0"
clap = "2.33"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "1"
